test remogen many wording
