# src/main/java/org/docksidestage/app/web/wx/routing/WxRoutingAction.java
@@ -161,12 +161,12 @@ public class WxRoutingAction extends FortressBaseAction {
     }
 
     // [hit]
-    // http://localhost:8151/fortress/wx/routing/amphi/1/theater
+    // http://localhost:8151/fortress/wx/routing/amphi/1/theater/zed/maihama
     // [not]
     // http://localhost:8151/fortress/wx/routing/amphi/1/2
-    // http://localhost:8151/fortress/wx/routing/amphi/1/dockside
-    @Execute(urlPattern = "@word/{}/@word")
-    public JsonResponse<RoutingCheckResult> amphiTheater(Integer first) {
-        return asJson(new RoutingCheckResult("amphiTheater()", first, null));
+    // http://localhost:8151/fortress/wx/routing/amphi/1/theater/zed
+    @Execute(urlPattern = "@word/{}/@word/{}/@word")
+    public JsonResponse<RoutingCheckResult> amphiTheaterMaihama(Integer first, String second) {
+        return asJson(new RoutingCheckResult("amphiTheaterMaihama()", first, second));
     }
 }
